kubernetes/external-dns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: external-dns
  labels:
    name: external-dns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
  namespace: external-dns
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: external-dns
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: external-dns
    spec:
      containers:
      - args:
        - --registry=txt
        - --txt-prefix=external-dns-
        - --txt-owner-id=k8s
        - --provider=rfc2136
        - --rfc2136-host=192.168.0.3
        - --rfc2136-port=53
        - --rfc2136-zone=k8s.internal.priv
        - --rfc2136-tsig-secret=40SBX+FoKkA20rqLKjdJ8CYfOcL7+M3FNy/MQxMvDhw=
        - --rfc2136-tsig-secret-alg=hmac-sha256
        - --rfc2136-tsig-keyname=external-dns
        - --rfc2136-tsig-axfr
        - --source=ingress
        - --source=service
        - --domain-filter=k8s.internal.priv
        - --annotation-filter=external-dns.alpha.kubernetes.io/exclude notin (true)
        image: k8s.gcr.io/external-dns/external-dns:v0.10.1
        imagePullPolicy: IfNotPresent
        name: external-dns
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: external-dns
      serviceAccountName: external-dns
      terminationGracePeriodSeconds: 30
