kubernetes/longhorn.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: longhorn-frontend
  labels:
    app: longhorn-ui
  namespace: longhorn-system
spec:
  ports:
  - name: http
    targetPort: 8000
    port: 8000
  selector:
    app: longhorn-ui
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ingress-tls
  namespace: longhorn-system
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.frontend.redirect.entrypoint: https
spec:
  tls:
    secretName: k8s-example-org-cert
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`longhorn.k8s.example.org`)
      kind: Rule
      services:
        - name: longhorn-frontend
          namespace: longhorn-system
          port: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernets.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/rule-type: PathPrefixStrip
  name: longhorn-ingress
  namespace: longhorn-system
spec:
  rules:
  - host: longhorn.k8s.internal.priv
    http:
      paths:
      - backend:
          service:
            name: longhorn-frontend
            port:
              number: 8000
        path: /
        pathType: Prefix
