kubernetes/prometheus-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-ingress-tls
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.frontend.redirect.entrypoint: https
spec:
  tls:
    secretName: k8s-example-org-cert
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`prometheus.k8s.example.org`)
      kind: Rule
      services:
        - name: prometheus-stack-prometheu-prometheus
          namespace: monitoring
          port: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
spec:
  rules:
  - host: prometheus.k8s.internal.priv
    http:
      paths:
      - backend:
          service:
            name: prometheus-stack-prometheu-prometheus
            port:
              number: 9090
        path: /
        pathType: Prefix
